chore: Update documentation links and metadata; remove package-lock.json

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,6 +1,6 @@
 contact_links:
   - name: Are you looking for documentation on dublin-core-metadata-enhancer?
-    url: https://Stadt-Geschichte-Basel.github.io/dublin-core-metadata-enhancer
+    url: https://dokumentation.stadtgeschichtebasel.ch/dublin-core-metadata-enhancer
     about: Please see the documentation for dublin-core-metadata-enhancer on its GitHub Pages page.
   - name: Do you want to discuss dublin-core-metadata-enhancer with the community?
     url: https://github.com/Stadt-Geschichte-Basel/dublin-core-metadata-enhancer/discussions
