--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 ]
 license = { text = "AGPL-3.0" }
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.13"
 dependencies = [
     "requests>=2.31.0",
     "openai>=1.0.0",
@@ -77,3 +77,6 @@ ignore = []
 [tool.ruff.lint.per-file-ignores]
 "__init__.py" = ["F401"]
 "test_*.py" = ["D"]
+
+[tool.hatch.build.targets.wheel]
+packages = ["enhance_metadata"]
