--- a/.github/workflows/quarto-publish.yml
+++ b/.github/workflows/quarto-publish.yml
@@ -85,7 +85,7 @@ jobs:
 
       - name: JamPack Optimization
         run: |
-          pnpm dlx @divriots/jampack ./_site
+          npx @divriots/jampack ./_site
 
       - name: Upload Built Artifacts
         uses: actions/upload-artifact@v4
