--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
 		"test": "python test/test_metadata_enhancer.py",
 		"python:install": "uv sync",
 		"python:test": "uv run pytest",
-		"python:format": "uv run ruff format . && uv run ruff check --fix .",
-		"python:lint": "uv run ruff check . && uvx ty check src/",
+		"python:format": "uvx ruff format . && uvx ruff check --fix .",
+		"python:lint": "uvx ruff check . && uvx ty check src/",
 		"python:type-check": "uvx ty check src/"
 	},
 	"devDependencies": {
