--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,13 +14,14 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "requests>=2.31.0",
-    "openai>=1.0.0",
+    "openai>=1.0.0"
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
     "ruff>=0.1.0",
+        "ty>=0.0.1a19",
     "types-requests>=2.31.0",
 ]
 
